tests/neg/i4373a.scala
// ==> 040fb47fbaf718cecb11a7d51ac5a48bf4f6a1fe.scala <==
object x0 {
  val x0 : _ with // error // error
// error